# NLP_project_group_30

./: .gitattributes  .gitignore  README.md  config.ini  main.ipynb  pyproject.toml  requirements.txt
data/corpus/: wiki_musique_corpus.json
data/musique/: dev.json  test.json  train.json
indices/: index_1
utils/: __init__.py  adore.py  contriever.py  misc.py  plots.py  prompts.py
